metadata for publishing

--- a/OpenXmlPowerTools/OpenXmlPowerTools.csproj
+++ b/OpenXmlPowerTools/OpenXmlPowerTools.csproj
@@ -1,6 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net45;net46;netstandard2.0</TargetFrameworks>
+    <PackageId>open-xml-powertools-ru-1</PackageId>
+    <Title>OpenXmlPowerTools-PS</Title>
+    <Authors>PurpleScythe, Eric White</Authors>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageProjectUrl>https://github.com/OfficeDev/Open-Xml-PowerTools</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/InsaneGrinder/OpenXmlPowerTools_RU</RepositoryUrl>
+    <Product>$(AssemblyName)-RU</Product>
+    <Description>fork from https://github.com/OfficeDev/Open-Xml-PowerTools
+added support for numbering format in the Russian alphabet (russianUpper, russianLower)</Description>
+    <AssemblyName>$(MSBuildProjectName)-RU</AssemblyName>
+    <RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))-RU</RootNamespace>
+    <Company> </Company>
   </PropertyGroup>
 
   <ItemGroup>
